--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
             <div class="toggle-settings">
                 <i class="fa fa-gear fa-spin"></i>
             </div>
-            <div class="settings-container">Testing Options</div>
+            <div class="settings-container">
+                <div class="option-box">
+                    <h4>Colors</h4>
+                    <ul class="colors-list">
+                        <li class="active" data-color="#3fff00"></li>
+                        <li data-color="#e91e63"></li>
+                        <li data-color="#009688"></li>
+                        <li data-color="#03a9f4"></li>
+                        <li data-color="#ff9800"></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <!-- end landing box-->
 
