modifier random backgrounds

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
                         <li data-color="#ff9800"></li>
                     </ul>
                 </div>
+                <div class="option-box">
+                    <h4>Random Backgrounds</h4>
+                    <div class="Random-Backgrounds">
+                        <span class="yes active" data-background="yes">Yes</span>
+                        <span class="no" data-background="no">Non</span>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- end landing box-->
