modifier random-backgrounds

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="option-box">
                     <h4>Random Backgrounds</h4>
-                    <div class="Random-Backgrounds">
+                    <div class="random-backgrounds">
                         <span class="yes active" data-background="yes">Yes</span>
                         <span class="no" data-background="no">Non</span>
                     </div>
