ajoute section about us

--- a/index.html
+++ b/index.html
@@ -41,15 +41,18 @@
         <!-- start landing-page -->
         <div class="landing-page">
             <div class="overlay"></div>
-            <div class="heading-area">
-                <div class="logo">special design</div>
-                <ul class="links">
-                    <li><span>about</span></li>
-                    <li>service</li>
-                    <li>products</li>
-                    <li>contact</li>
-                </ul>
+            <div class="container">
+                <div class="heading-area">
+                    <div class="logo">special design</div>
+                    <ul class="links">
+                        <li><span>about</span></li>
+                        <li>service</li>
+                        <li>products</li>
+                        <li>contact</li>
+                    </ul>
+                </div>
             </div>
+            
             <div class="introduction-text">
                 <h1>we are <span>creative</span> agency</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing alit. Repellendus<br> odit nihil ullam nssciunt quidem iste</p>
@@ -57,6 +60,19 @@
         </div>
         <!-- end landing page-->
 
+        <!-- start about-us-->
+        <div class="container">
+            <div class="about-us">
+                <div class="info-box">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet consecteteur adipisicing elit. Perferendis ipsum, tenetur dolores esse magni ratione distinction, adipisicing elit. Perferendis ipsum, tenetur dolores esse magni ratione distinction</p>
+                </div>
+                <div class="image-box">
+                    <img src="img/about-us.png" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- end about-us-->
 
 
         <script src="js/script.js"></script>
