modifier la section skills

--- a/index.html
+++ b/index.html
@@ -74,7 +74,22 @@
         </div>
         <!-- end about-us-->
 
+        <!-- start skills -->
 
+        <div class="skills">
+            <div class="container">
+                <h2>skills</h2>
+                <div class="skill-box">
+                    <div class="skill-name">HTML</div>
+                    <div class="skill-progress"><span>50%</span></div>
+                </div>
+                <div class="skill-box">
+                    <div class="skill-name">CSS</div>
+                    <div class="skill-progress"><span>50%</span></div>
+                </div>
+            </div>
+        </div>
+        <!-- end skills -->
         <script src="js/script.js"></script>
     </body>
 </html>
