--- a/index.html
+++ b/index.html
@@ -78,26 +78,26 @@
 
         <div class="skills">
             <div class="container">
-                <h2>skills</h2>
+                <h2>Our skills</h2>
                 <div class="skill-box">
                     <div class="skill-name">HTML</div>
-                    <div class="skill-progress"><span data-progress="95%">50%</span></div>
+                    <div class="skill-progress"><span data-progress="95%"></span></div>
                 </div>
                 <div class="skill-box">
                     <div class="skill-name">CSS</div>
-                    <div class="skill-progress"><span data-progress="90%">50%</span></div>
+                    <div class="skill-progress"><span data-progress="90%"></span></div>
                 </div>
                 <div class="skill-box">
                     <div class="skill-name">JavaScript</div>
-                    <div class="skill-progress" data-progress="70%"><span>50%</span></div>
+                    <div class="skill-progress" data-progress="70%"><span></span></div>
                 </div>
                 <div class="skill-box">
                     <div class="skill-name">Bootstrap</div>
-                    <div class="skill-progress"><span data-progress="90%">50%</span></div>
+                    <div class="skill-progress"><span data-progress="90%"></span></div>
                 </div>
                 <div class="skill-box">
                     <div class="skill-name">Angular</div>
-                    <div class="skill-progress"><span data-progress="90%">50%</span></div>
+                    <div class="skill-progress"><span data-progress="90%"></span></div>
                 </div>
             </div>
         </div>
